# parse-torrent

./: Cargo.toml  dev-screen.torrent  screen.torrent  ubuntu.torrent
examples/: ex1.rs
src/: lib.rs  torrent.rs
