[package]
name = "parse_torrent"
version = "0.5.0"
authors = ["craig OConnor <oconnorct1@gmail.com>"]

[dependencies]
chrono = "0.3"
serde_bencode = "0.1.3"
serde = "0.8.22"
serde_derive = "0.8.22"
bincode = "0.6.1"
rust-crypto = "0.2.36"
rustc-serialize = "0.3"
serde_bytes = "0.10.0"
sha1 = "0.2.0"

[dependencies.bencode]
git = "https://github.com/arjantop/rust-bencode"
