[package]
name = "parse_torrent"
version = "0.5.2"
description = "Parse Bittorent .torrent files into usable structs"
authors = ["craig OConnor <oconnorct1@gmail.com>"]
repository = "https://github.com/CraigglesO/parse-torrent"
license = "GPL-3.0"

[dependencies]
serde_bencode = "^0.2.0"
serde = "^1.0.0"
serde_derive = "^1.0.0"
rust-crypto = "0.2.36"
serde_bytes = "0.10.0"
bencode = "0.1.16"
